# physics-degree

./: README.md  pyproject.toml
books/cpp_primer/chapter1/: 1_intro.cpp  a.out
books/cpp_primer/chapter1/exercises/: exercise1_11.cpp
cpp_primer/chapter1/: 1-4_flow_of_control.cpp
cpp_primer/chapter1/exercises/: a.out  exercise1_12.cpp  exercise1_9.cpp
homework/calc-III/chapter13/tex/13.3/: HW-13.3.fdb_latexmk  HW-13.3.fls  HW-13.3.tex
homework/calc-III/chapter13/tex/13.4/: HW-13.4.fdb_latexmk  HW-13.4.fls  HW-13.4.tex
py-physics-concepts/: README.md
py-physics-concepts/classes/linear_algebra/concepts/: determinant.ipynb
py-physics-concepts/src/classes/phys_II/: electric_fields.ipynb
py-physics-concepts/src/independent/: riemann_approx.ipynb
py-physics-concepts/src/independent/computational-physics/: 02_arrays.ipynb  03_graphs_and_visualization.ipynb
py-physics-concepts/src/independent/tour_of_c++/: 01_the_basics.cpp  a.out
src/classes/linear_algebra/.ipynb_checkpoints/: determinant-checkpoint.ipynb
src/classes/linear_algebra/concepts/: determinant.py
src/classes/phys_II/: electric_fields.ipynb
src/independent/: scratch.ipynb
src/independent/computational-physics/: 00.1_summations.ipynb  03_graphs_and_visualization.ipynb  04_accuracy_and_speed.ipynb  README.md
src/independent/computational-physics/data/: sunspots.txt
src/linear_algebra/concepts/: determinant.ipynb  determinant.py  power_iteration.py
src/linear_algebra/concepts/.ipynb_checkpoints/: determinant-checkpoint.ipynb
(+1 files in other folders)
