[project]
name = "class-notes"
version = "0.1.0"
description = ""
authors = [
    {name = "ijs32",email = "iansilber32@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "numpy (>=2.3.1,<3.0.0)",
    "scipy (>=1.16.0,<2.0.0)",
    "matplotlib (>=3.10.3,<4.0.0)",
    "pandas (>=2.3.0,<3.0.0)",
    "jupyter (>=1.1.1,<2.0.0)"
]

[tool.poetry]
packages = [
    {include = "linear_algebra", from = "src"},
    {include = "calc_III", from = "src"},
    {include = "phys_II", from = "src"}
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
